# mmr

./: .gitignore  CMakeLists.txt  HANDOFF.md  Inject Tool.bat  README.md  Update.bat  inject.ps1  rebuild-inject.ps1  unload-only.ps1
src/: dllmain.cpp  hooks.cpp  hooks.h  menu.cpp  menu.h  recorder.cpp  recorder.h  sdk.h
